--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-parent></app-parent>
+<app-parent (submittingDone)="submited()"></app-parent>
+<app-version *ngIf="isSubmittingOver"></app-version>
