--- a/src/app/components/parent/parent.component.html
+++ b/src/app/components/parent/parent.component.html
@@ -1,5 +1,5 @@
 <h2>Should mankind colonize the Universe?</h2>
-<h3>Agree: {{agreedSumNum}},Disagree: {{disagreedSumNum}}</h3>
+<h3>Agree: {{agreedTotalNumber}},Disagree: {{disagreedTotalNumber}}</h3>
 <app-child
 *ngFor="let user of users"
 [user]="user.name"
