--- a/src/app/components/sub-version/sub-version.component.html
+++ b/src/app/components/sub-version/sub-version.component.html
@@ -1,2 +1,2 @@
-<p *ngIf="next.type == 'nextMinor'">minor changed from {{next.data.previousMinor}} to {{next.data.currentMinor}}</p>
-<p *ngIf="next.type == 'nextMajor'">major changed from {{next.data.previousMajor}} to {{next.data.currentMajor}}, minor changed from {{next.data.previousMinor}} to {{next.data.currentMinor}}</p>
+<li *ngIf="next.type == 'nextMinor'">minor changed from {{next.data.previousMinor}} to {{next.data.currentMinor}}</li>
+<li *ngIf="next.type == 'nextMajor'">major changed from {{next.data.previousMajor}} to {{next.data.currentMajor}}, minor changed from {{next.data.previousMinor}} to {{next.data.currentMinor}}</li>
