--- a/src/app/components/version/version.component.html
+++ b/src/app/components/version/version.component.html
@@ -4,7 +4,7 @@
 <h3>Version {{currentMajor + '.' + currentMinor}}</h3>
 <h4>Change log:</h4>
 <ul>
-    <li *ngFor="let next of versions">
-        <app-sub-version [next]="next"></app-sub-version>
+    <li *ngFor="let version of versions">
+        <app-sub-version [version]="version"></app-sub-version>
     </li>
 </ul>
